Linked register to login

--- a/Projects/Dait_Kobe_Assignment2/public/login_display.html
+++ b/Projects/Dait_Kobe_Assignment2/public/login_display.html
@@ -28,7 +28,7 @@
     <input name="login_submit_button" type="submit" class="logbtn" value="Login">
 
     <div class="bottom-text">
-      Don't have account? <a href="#">Sign up</a>
+      Don't have account? <a href="register_display.html">Sign up</a>
     </div>
   </form>
 
