--- a/Labs/Lab12/order_form_Ex3.html
+++ b/Labs/Lab12/order_form_Ex3.html
@@ -14,7 +14,7 @@
             return returnErrors ? errors : (errors.length == 0);
         }
         function displayPurchase() {
-            if (isNonNegInt(GET['quantity_textbox'])) {
+            if (typeof GET['quantity_textbox'] != 'undefined') {
                 document.write(`Thanks for you for ordering ${GET['quantity_textbox']} things!`);
             }
             else {
@@ -26,10 +26,6 @@
         let params = (new URL(document.location)).searchParams;
         GET = {};
         params.forEach(function (value, key) { GET[key] = value });
-        if (typeof GET['quantity_textbox'] != 'undefined') {
-            displayPurchase();
-            window.stop;
-        }
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +34,7 @@
 </head>
 
 <body>
-    <form name="quantity_form" action="" method="POST">
+    <form name="quantity_form" action="" method="GET">
         <label for="quantity_textbox">quantity desired:</label>
         <input name="quantity_textbox" type="text" onkeyup="checkQuantityTextbox();">
         <span id='qty_textbox_message'>Enter a quantity</span>
