--- a/Projects/Dait_Kobe_Assignment2/public/login_display.html
+++ b/Projects/Dait_Kobe_Assignment2/public/login_display.html
@@ -1,5 +1,3 @@
-<script src="user_data.json" type="text/javascript"></script>
-
 <!-- All HTML below is taken from https://darkcode1.blogspot.com/2019/07/animated-login-form-using-html-css.html -->
 
 <!DOCTYPE html>
@@ -16,7 +14,7 @@
   <form action="/login_form" class="login-form" method="POST">
     <h1>Login</h1>
     <div class="txtb">
-      <input type="text" name="username">
+      <input type="text" name="username" onchange="javascript:this.value = this.value.toLowerCase();"> <!--Makes the username case-insensitive-->
       <span data-placeholder="Username"></span>
     </div>
 
