--- a/Projects/Dait_Kobe_Assignment2/public/index.html
+++ b/Projects/Dait_Kobe_Assignment2/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kobe's Exotic Pet Shop</title>
-  <link rel="stylesheet" href="exoticStore.css">
+  <link rel="stylesheet" href="store_design.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
 </head>
 
