table css changes

--- a/Projects/Dait_Kobe_Assignment2/public/index.html
+++ b/Projects/Dait_Kobe_Assignment2/public/index.html
@@ -27,7 +27,7 @@
     <br>
     <div style="width: 600px; margin: auto;" class="animals">
       <table>
-        <tr style="text-align: center;">
+        <tr class="index-table" style="text-align: center;">
           <th>Welcome to the online pet store!</th>
         </tr>
         <tr>
