--- a/Projects/Dait_Kobe_Assignment2/public/invoice_display.html
+++ b/Projects/Dait_Kobe_Assignment2/public/invoice_display.html
@@ -33,9 +33,8 @@
 </header>
 
 <body>
-  <div style="width: 600px; margin: auto;">
-    <table id="invoice" border="2">
-
+  <div>
+    <table class="invoice-box" cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
           <th style="text-align: center;" width="43%">Item</th>
