--- a/Projects/Dait_Kobe_Assignment2/public/invoice_display.html
+++ b/Projects/Dait_Kobe_Assignment2/public/invoice_display.html
@@ -90,7 +90,7 @@
         <script>
           // Total
           document.write(`
-                <tr>
+                <tr class="total">
                     <td style="text-align: center;" colspan="3" width="67%"><strong>Total</strong></td>
                     <td style="text-align: right;" width="54%"><strong>\$${total.toFixed(2)}</strong></td>
                 </tr>
