--- a/Projects/Dait_Kobe_Assignment2/public/products_display.html
+++ b/Projects/Dait_Kobe_Assignment2/public/products_display.html
@@ -1,21 +1,50 @@
 <script src="./products.js" type="text/javascript"></script>
 <script>
-  // Everything in script taken from Lab 13
-  function checkQuantityTextbox() {
-    errors_array = isNonNegInt(qty_textbox_message.value, true);
-    qty_textbox_message.innerHTML = errors_array.join(' ');
-  }
-  function isNonNegInt(q, returnErrors = false) {
+  // Taken from Assignment 1 Example
+  // Function used to check for valid quantities
+  function isNonNegInt(q, return_errors = false) {
     errors = []; // assume no errors at first
-    if (Number(q) != q) errors.push('Not a number!'); // Check if string is a number value
-    if (q < 0) errors.push('Negative value!'); // Check if it is non-negative
-    if (parseInt(q) != q) errors.push('Not an integer!'); // Check that it is an integer
-    return returnErrors ? errors : (errors.length == 0);
+    if (q == '') q = 0; // handle blank inputs as if they are 0
+    if (Number(q) != q) errors.push('<font color="red">Not a number!</font>'); // Check if string is a number value
+    else if (q < 0) errors.push('<font color="red">Not a positive integer!</font>'); // Check if it is non-negative
+    else if (parseInt(q) != q) errors.push('<font color="red">Not an integer!</font>'); // Check that it is an integer
+    return return_errors ? errors : (errors.length == 0); // Returns any errors
   }
-  // Get the query string values from form submission
-  let params = (new URL(document.location)).searchParams;
-  GET = {};
-  params.forEach(function (value, key) { GET[key] = value });
+  // Taken from Assignment 1 Example
+  // Checks the value of your input in the textbox
+  function checkQuantityTextbox(theTextbox) {
+    errs = isNonNegInt(theTextbox.value, true); //checks value of textbox and sets isNonNegInt to true (calling the function) and assigns it to errors 
+    if (errs.length == 0) errs = ['You want:']; // Changes quantity label to 'You want:' if quantity is valid
+    if (theTextbox.value.trim() == '') errs = ['Quantity:'];
+    document.getElementById(theTextbox.name + '_label').innerHTML = errs.join(", "); //this displays the error messages above the quantity text box and tells the user what type of error they have
+  }
+  // Taken from Assignment 1 Example
+  window.onload = function () { //function for when the user submits and the page finishes loading
+    let params = (new URL(document.location)).searchParams; // get the query string which has the form data
+    // form was submitted to check that quantities are valid then redirect to invoice if ok.
+    if (params.has('purchase_submit_button')) { //if the form has purchse_submit from the user clicking submit 
+      has_errors = false; // Assume no invalid quantities
+      total_qty = 0; // Used to check if quantities are inputted
+      for (i = 0; i < products.length; i++) { //loop to check quantity user inputs
+        if (params.has(`quantity${i}`)) { // if the form has quantity
+          a_qty = params.get(`quantity${i}`); //assigns the value 
+          // make textboxes sticky in case of invalid data
+          quantity_form[`quantity${i}`].value = a_qty; //assigns a_qty into the value of quantity(i) in quantity_form
+          total_qty += a_qty; //total_qty becomes total_qty plus a_qty
+          if (!isNonNegInt(a_qty)) { //if a_qty is not a valid NonNegInt then it will display these errors 
+            has_errors = true; // oops, invalid quantity
+            checkQuantityTextbox(quantity_form[`quantity${i}`]); // show where the error is
+          }
+        }
+      }
+      // Respond to errors
+      if (has_errors == true) { // Alerts invalid quantities
+        alert("Please enter only valid quantities!"); 
+      } else if (total_qty == 0) { // Alerts when no quantities are inputted
+        alert("Please select quantities!");
+      }
+    }
+  }
 </script>
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
@@ -48,14 +77,15 @@
       <br>
       <main>
         <script>
-          // Generating variables for items --> Taken from Assignment 1 example
+          // Taken from Assignment 1 Example
+          // Generating variables for items
           for (i = 0; i < products.length; i++) {
             document.write(` 
               <section class="item">
               <h2>${products[i]["exotic"]}</h2>
               <p>\$${products[i]["price"]}</p>
-              <input id="qty_textbox_message" type="text" placeholder="Enter a quantity" name="quantity${i}" onkeyup="checkQuantityTextbox(this);">
-              <label id="quantity">Quantity</label>
+              <label id="quantity${i}_label"}">Quantity:</label>
+              <br><input type="text" placeholder="Enter a quantity" name="quantity${i}" onkeyup="checkQuantityTextbox(this);">
               <img class="img" src="${products[i]["image"]}">
               </section>
             `);
@@ -63,7 +93,6 @@
         </script>
       </main>
     </div>
-    <!--Taken from Lab 13 -->
     <div id="buyButton">
       <input name="purchase_submit_button" type="submit" value="Purchase">
     </div>
