--- a/Projects/Dait_Kobe_Assignment2/public/invoice_display.html
+++ b/Projects/Dait_Kobe_Assignment2/public/invoice_display.html
@@ -3,79 +3,7 @@
 <script src="./products.js" type="text/javascript"></script>
 
 <script>
-  // Taken from Assignment 2 example
-  // Get the query string values from form submission
-  let params = (new URL(document.location)).searchParams;
-
-
-  // Taken from Assignment 2 example
-  // Once the products have been successfully loaded and formatted as a JSON object
-  async function fetchProducts() {
-    await fetch('products').then(function (response) {
-      if (response.ok) {
-        response.json().then(function (json) {
-          display_selections(json);;
-        });
-      } else {
-        console.log('Network request for products.json failed with response ' + response.status + ': ' + response.statusText);
-      }
-    });
-  }
-
-  // Taken from Assignment 2 example
-  function display_selections(products) {
-    // Processes invoice after form is submitted
-    if (params.has('purchase_submit_button')) {
-      subtotal = 0;
-      for (i = 0; i < products.length; i++) {
-        a_qty = params.get(`quantity${i}`);
-        if (a_qty > 0) {
-          // product row
-          extended_price = a_qty * products[i].price
-          subtotal += extended_price;
-          invoice_row = invoice_box.insertRow(1)
-          invoice_row.innerHTML = (`
-            <tr>
-              <td width="43%">${products[i].exotic}</td>
-              <td align="center" width="11%">${a_qty}</td>
-              <td width="13%">\$${products[i].price}</td>
-              <td width="54%">\$${extended_price}</td>
-            </tr>
-            `);
-        }
-      }
-      subtotal_span.innerHTML = subtotal;
-
-      // Compute tax
-      var tax_rate = 0.0575;
-      tax_rate_span.innerHTML = 100 * tax_rate;
-
-      var tax = tax_rate * subtotal;
-      tax_span.innerHTML = tax.toFixed(2);
-
-      // Compute shipping
-      if (subtotal <= 50) {
-        shipping = 2;
-      }
-      else if (subtotal <= 100) {
-        shipping = 5;
-      }
-      else {
-        shipping = 0.05 * subtotal; // 5% of subtotal
-      }
-      shipping_span.innerHTML = shipping.toFixed(2);
-
-      // Compute grand total
-      var total = subtotal + tax + shipping;
-      total_span.innerHTML = total.toFixed(2);
-
-    } else {
-      document.write('No form submitted!');
-    }
-  }
-
   window.onload = function () {
-    console.log(params);
     /*if (params.has("username")) { // Greet the user (personalization). 
       alert(`Thank you for your purchase ${params.get("username")}. Please buy again soon!`);
     } else { // this is security, must have a username or get bounced to login
@@ -83,7 +11,6 @@
       window.location = "./login_display.html" + window.location.search;
     }
     */
-    fetchProducts();
   }
 </script>
 <html lang="en">
@@ -113,59 +40,100 @@
         <th style="text-align: center;" width="13%">Price</th>
         <th style="text-align: center;" width="54%">Extended Prices</th>
       </tr>
+      <script>
+        // Taken from Assignment 2 example
+        // Get the query string values from form submission
+        let params = (new URL(document.location)).searchParams;
+
+        // Processes invoice after form is submitted
+        if (params.has('purchase_submit_button')) {
+          subtotal = 0;
+          for (i = 0; i < products.length; i++) {
+            a_qty = params.get(`quantity${i}`);
+            if (a_qty > 0) {
+              // prints product rows
+              extended_price = a_qty * products[i].price
+              subtotal += extended_price;
+              document.write(`
+            <tr>
+              <td width="43%">${products[i].exotic}</td>
+              <td align="center" width="11%">${a_qty}</td>
+              <td align="right" width="13%">\$${products[i].price}</td>
+              <td align="right" width="54%">\$${extended_price}</td>
+            </tr>
+            `);
+            }
+          }
+
+          // Compute tax
+          var tax_rate = 0.05;
+          tax_rate_num = 100 * tax_rate;
+
+          var tax = tax_rate * subtotal;
+
+          // Compute shipping
+          if (subtotal <= 99.99) {
+            shipping = 5;
+          }
+          else if (subtotal <= 499.99) {
+            shipping = 7;
+          }
+          else {
+            shipping = 0.05 * subtotal
+          }
+
+          // Compute grand total
+          var total = subtotal + tax + shipping;
+        }
+      </script>
       <tr>
         <td colspan="4" width="100%">&nbsp;</td>
       </tr>
       <script>
-        for (var i = 0; i < products.length; i++) {
-          var extended_prices = products[i]["price"] * quantity[i];
-          var subtotal = extended_prices + subtotal;
-          if (quantity[i] > 0) {
-            document.write(`
-              <tr>
-                <td width="43%">${products[i]["exotic"]}</td>
-                <td align="center" width="11%">${quantity[i]}</td>
-                <td align="right" width="13%">\$${products[i]["price"].toFixed(2)}</td>
-                <td align="right" width="54%">\$${extended_prices.toFixed(2)}</td>
-              </tr>
-            `);
-          }
-        }
+        // Subtotal
+        document.write(`
+                <tr>
+                    <td style="text-align: right;" colspan="3" width="67%">Sub-total</td>
+                    <td style="text-align: right;" style="align: right;" width="54%">\$${subtotal.toFixed(2)}</td>
+                </tr>
+                `);
       </script>
-      <tr>
-        <td style="text-align: center;" colspan="3" width="67%">Subtotal</td>
-        <td width="54%">$
-          <span id=subtotal_span></span>
-        </td>
-      </tr>
-      <tr>
-        <td style="text-align: center;" colspan="3" width="67%"><span style="font-family: arial;">
-            Tax @<span id="tax_rate_span"></span>%
-        </td>
-        <td width="54%">$
-          <span id="tax_span"></span>
-        </td>
-      </tr>
-      <tr>
-        <td style="text-align: center;" colspan="3" width="67%">Shipping</span></td>
-        <td width="54%">$
-          <span id="shipping_span"></span>
-        </td>
-      </tr>
-      <tr>
-        <td style="text-align: center;" colspan="3" width="67%"><strong>Total</strong></td>
-        <td width="54%">
-          <strong>$<span id="total_span"></span></strong></td>
-      </tr>
+      <script>
+        // Tax
+        document.write(`
+                <tr>
+                    <td style="text-align: right;" colspan="3" width="67%"><span style="font-family: arial;">Tax @${tax_rate_num.toFixed(2)}%</span></td>
+                    <td style="text-align: right;" width="54%">\$${tax.toFixed(2)}</td>
+                </tr>
+                `);
+      </script>
+      <script>
+        // Shipping
+        document.write(`
+                  <tr>
+                      <td style="text-align: right;" colspan="3" width="67%"><span style="font-family: arial;">Shipping</span></td>
+                      <td style="text-align: right;" width="54%">\$${shipping.toFixed(2)}</td>
+                  </tr>
+                  `);
+      </script>
+      <script>
+        // Total
+        document.write(`
+                <tr>
+                    <td style="text-align: right;" colspan="3" width="67%"><strong>Total</strong></td>
+                    <td style="text-align: right;" width="54%"><strong>\$${total.toFixed(2)}</strong></td>
+                </tr>
+                `);
+      </script>
       <tr>
         <td colspan="4" width="100%">&nbsp;</td>
       </tr>
       <tr>
         <td colspan="4" width="100%">
           <em>OUR SHIPPING POLICY IS:</em>
-          <br>A subtotal <b>$0 - $49.99</b> will be <b>$2 shipping</b>
-          <br>A subtotal <b>$50 - $99.99</b> will be <b>$5 shipping</b>
-          <br>Subtotals over <b>$100</b> will be charged <b>5% of the subtotal amount</b>
+          <br>A subtotal <b>$0 - $99.99</b> will be <b>$5 shipping</b>
+          <br>A subtotal <b>$100 - $499.99</b> will be <b>$7 shipping</b>
+          <br>Subtotals over <b>$500</b> will be charged <b>5% of the subtotal amount</b>
         </td>
       </tr>
     </tbody>
