--- a/Projects/Dait_Kobe_Assignment2/public/index.html
+++ b/Projects/Dait_Kobe_Assignment2/public/index.html
@@ -1,3 +1,6 @@
+<!-- Author: Kobe Dait -->
+<!-- File Description: Home Page -->
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="en">
 
