--- a/Projects/Dait_Kobe_Assignment4/public/index.html
+++ b/Projects/Dait_Kobe_Assignment4/public/index.html
@@ -32,7 +32,7 @@
 <head>
   <meta charset="utf-8">
   <title>Login</title>
-  <link rel="stylesheet" href="login_design.css">
+  <link rel="stylesheet" href="morningBrew.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
 </head>
 
@@ -80,6 +80,6 @@
 <script>
   // Source from Shane Shimizu
   // Sets link with quantity data to pass to next page
-  registrationpage.href = "register_display.html" + document.location.search;
+  registrationpage.href = "results_display.html" + document.location.search;
   loginName.action = "./login_form" + document.location.search; 
 </script>
